# py-spiffe

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CODEOWNERS  CONTRIBUTING.md  LICENSE  Makefile  Pipfile  README.md  copyright.py  dev  pyproject.toml  setup.py  tasks.py  tox.ini
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: build.yaml  coverage.yaml  pr_build.yaml  publish.yaml
.github/workflows/scripts/: agent.conf  run-spire.sh
docs/: Makefile  conf.py  index.rst
docs/source/: modules.rst  pyspiffe.bundle.jwt_bundle.jwt_bundle.rst  pyspiffe.bundle.jwt_bundle.jwt_bundle_set.rst  pyspiffe.bundle.jwt_bundle.rst  pyspiffe.bundle.rst  pyspiffe.bundle.x509_bundle.rst  pyspiffe.bundle.x509_bundle.x509_bundle.rst  pyspiffe.bundle.x509_bundle.x509_bundle_set.rst  pyspiffe.config.rst  pyspiffe.rst  pyspiffe.spiffe_id.rst  pyspiffe.spiffe_id.spiffe_id.rst  pyspiffe.spiffe_id.trust_domain.rst  pyspiffe.svid.jwt_svid.rst  pyspiffe.svid.rst  pyspiffe.svid.x509_svid.rst  pyspiffe.workloadapi.default_workload_api_client.rst  pyspiffe.workloadapi.jwt_source.rst  pyspiffe.workloadapi.rst  pyspiffe.workloadapi.workload_api_client.rst  pyspiffe.workloadapi.x509_source.rst
examples/: README.md  pyproject.toml
examples/httpx-stdlib-mtls/: README.md  client.py
examples/mtls-smoke/: README.md  client.py  server.py
examples/src/py_spiffe_examples/: __init__.py  httpx_stdlib_mtls_client.py  mtls_smoke_client.py  mtls_smoke_server.py
proto/: workload.proto  workload_pb2.py  workload_pb2.pyi  workload_pb2_grpc.py
pyspiffe/: Makefile  README.md  pyproject.toml
pyspiffe-tls/: Makefile  README.md  pyproject.toml
pyspiffe/src/pyspiffe/: __init__.py  config.py
pyspiffe/tests/spiffe_id/: test_trust_domain.py
pyspiffe/tests/utils/: certs.py  jwt.py  utils.py
pyspiffe/tests/workloadapi/: test_handle_error.py  test_jwt_source.py  test_x509_context.py  (+3 more)
scripts/: copyright.py  lock-dependencies.sh
spiffe/: CHANGELOG.md  Makefile  README.md  pyproject.toml
spiffe-tls/: CHANGELOG.md  Makefile  README.md  pyproject.toml
spiffe-tls/src/spiffetls/: __init__.py  context.py  dial.py  errors.py  listen.py  mode.py  stdlib_context.py  util.py
spiffe-tls/src/spiffetls/tlsconfig/: authorize.py
spiffe-tls/tests/integration/: test_listen_and_dial.py  test_one.py  test_stdlib_context_mtls.py
spiffe-tls/tests/unit/: test_authorize.py  test_spiffe_ssl_context.py  test_ssl_context.py
spiffe/src/spiffe/: __init__.py  config.py  errors.py  exceptions.py
spiffe/src/spiffe/_proto/: workload_pb2.py  workload_pb2.pyi  workload_pb2_grpc.py
spiffe/src/spiffe/bundle/jwt_bundle/: __init__.py  errors.py  exceptions.py  jwt_bundle.py  jwt_bundle_set.py
spiffe/src/spiffe/bundle/x509_bundle/: errors.py  exceptions.py  x509_bundle.py  x509_bundle_set.py
spiffe/src/spiffe/proto/: workload_pb2.py  workload_pb2.pyi  workload_pb2_grpc.py
spiffe/src/spiffe/spiffe_id/: __init__.py  spiffe_id.py
spiffe/src/spiffe/svid/: __init__.py  errors.py  exceptions.py  jwt_svid.py  jwt_svid_validator.py  x509_svid.py
spiffe/src/spiffe/utils/: certificate_utils.py  errors.py  exceptions.py
spiffe/src/spiffe/workloadapi/: errors.py  exceptions.py  handle_error.py  jwt_source.py  workload_api_client.py  x509_context.py  x509_source.py
spiffe/src/spiffe/workloadapi/grpc/: generic_client_interceptor.py  header_manipulator_client_interceptor.py
spiffe/tests/: conftest.py
spiffe/tests/bundle/jwt_bundle/: test_jwt_bundle.py  test_jwt_bundle_set.py
spiffe/tests/bundle/x509bundle/: test_x509_bundle.py  test_x509_bundle_set.py
spiffe/tests/integration/: test_jwt_source.py  test_workload_api_client.py  test_x509_source.py
spiffe/tests/spiffe_id/: test_spiffe_id.py  test_trust_domain.py
spiffe/tests/svid/jwtsvid/: test_jwt_svid.py  test_jwt_svid_validator.py
spiffe/tests/svid/x509svid/: test_x509_svid.py
spiffe/tests/unit/bundle/jwt_bundle/: test_jwt_bundle.py  test_jwt_bundle_set.py
spiffe/tests/unit/bundle/x509bundle/: test_x509_bundle.py  test_x509_bundle_set.py
spiffe/tests/unit/spiffe_id/: test_spiffe_id.py  test_trust_domain.py
spiffe/tests/unit/svid/jwtsvid/: test_jwt_svid.py  test_jwt_svid_validator.py
spiffe/tests/unit/svid/x509svid/: test_x509_svid.py
spiffe/tests/unit/workloadapi/: test_cancel_handler.py  test_config.py  test_handle_error.py  test_jwt_source.py  test_retry_handler.py  test_workload_api_client.py  test_workload_api_client_fetch_x509.py  test_workload_api_client_jwt.py  test_x509_context.py  test_x509_source.py
spiffe/tests/utils/: jwt.py
spiffe/tests/utils/jwks/: jwks_missing_kid.json
spiffe/tests/workloadapi/: test_config.py  test_handle_error.py  test_jwt_source.py  test_workload_api_client.py  test_workload_api_client_fetch_x509.py  test_workload_api_client_jwt.py  test_x509_context.py  test_x509_source.py
src/pyspiffe/: __init__.py  config.py  exceptions.py
test/: __init__.py  test_config.py  test_example.py
test/grpc/: test_default_grpc_client.py
test/spiffe_id/: test_spiffe_id.py  test_trust_domain.py
test/svid/: test_utils.py
test/utils/: __init__.py  jwt_utils.py  test_certificate_utils.py  utils.py
test/workloadapi/: fake_workload_api.py  fake_workload_api_errors.py  test_cancel_handler.py  test_constants.py  test_default_workload_api_client.py  test_default_workload_api_client_errors.py  test_default_workload_api_client_fetch_x509.py  test_default_workload_api_client_fetch_x509_svid.py  test_default_workload_api_client_jwt.py  test_default_workload_spi_client.py  test_handle_error.py  test_jwt_source.py  test_retry_handler.py  test_watcher.py  test_workload_api_client.py  test_workload_api_client_fetch_x509.py  test_workload_api_client_jwt.py  test_x509_context.py  test_x509_source.py  utils.py
testutils/: pyproject.toml
testutils/src/testutils/: certs.py  jwt.py  utils.py
testutils/src/testutils/jwks/: jwks_1_ec_key.json  jwks_3_keys.json  jwks_ec_missing_x.json  jwks_missing_kid.json
testutils/src/testutils/x509-certs/: 4-key.der
testutils/testutils/: jwt.py
(+75 files in other folders)
