[tool.poetry]
name = "pyspiffe"
version = "0.1.0"
description = "Python library for SPIFFE support"
authors = ["Max Lambrecht <maxlambrecht@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9" # >= 3.9, < 4.0
grpcio = "~1.60.0"
grpcio-tools = "~1.60.0"
requests = "~2.30.0"
python-json-logger = "~2.0.6"
cryptography = "~42.0.5"
pyjwt = { version = "~2.7.0", extras = ["crypto"] }
pyasn1 = "~0.5.0"
pyasn1-modules = "~0.3.0"
pem = "~23.1.0"

[tool.poetry.dev-dependencies]
black = "22.3.0"
mypy = "1.7.1"
mypy-protobuf = "3.5.0"
types-protobuf = "4.24.0.4"
pre-commit = "3.6.2"
tox = "~4.12.0"
sphinx = "~7.2.5"
pytest = "8.1.1"
pytest-mock = "~3.11.1"
flake8 = "7.0.0"
coverage = "6.5.0"
coveralls = "3.3.1"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

# Tool configurations
[tool.black]
skip-string-normalization = true
target-version = ['py39']
exclude = '''
/(
    src/pyspiffe/proto
)/
'''

[tool.mypy]
ignore_missing_imports = true
files = ["src", "tests"]

[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
]
