[project]
name = "spiffe-tls"
version = "0.2.2"
description = "TLS Support using SPIFFE"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Max Lambrecht", email = "maxlambrecht@gmail.com" }]
dependencies = [
  "spiffe>=0.2.3,<0.3.0",
  "pyOpenSSL>=24,<26",
  "idna>=3,<4",
]

[project.urls]
Repository = "https://github.com/HewlettPackard/py-spiffe"

[dependency-groups]
dev = [
  "black>=26.1,<27",
  "mypy>=1.19,<2",
  "mypy-protobuf>=5,<6",
  "types-pyOpenSSL>=24.1,<25",
  "pytest>=9,<10",
  "pytest-mock>=3.15,<4",
  "pre-commit>=4.5,<5",
  "flake8>=7.3,<8",
  "testutils",
]

[tool.uv.sources]
spiffe = { workspace = true }
testutils = { workspace = true }

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["spiffetls*"]

[tool.setuptools.package-data]
spiffetls = ["py.typed"]

[tool.mypy]
ignore_missing_imports = true
files = ["src", "tests"]


[tool.black]
skip-string-normalization = true
target-version = ['py310']


[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
]
testpaths = [
    "tests",
]
