[project]
name = "spiffe"
version = "0.2.3"
description = "Python library for SPIFFE support"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Max Lambrecht", email = "maxlambrecht@gmail.com" }]
dependencies = [
  "grpcio>=1.62,<2",
  "cryptography>=45,<47",
  "pyjwt[crypto]>=2,<2.11",
  "pyasn1>=0.6.0,<0.7.0",
  "pyasn1-modules>=0.4.0,<0.5.0",
  "pem>=23,<24",
  "protobuf>=5,<7",
]

[project.urls]
Repository = "https://github.com/HewlettPackard/py-spiffe"

[dependency-groups]
dev = [
  "ruff>=0.13,<0.14",
  "mypy>=1.19,<2",
  "mypy-protobuf>=5,<6",
  "pytest>=9,<10",
  "pytest-mock>=3.15,<4",
  "pre-commit>=4.5,<5",
  "coverage>=7,<8",
  "testutils",
]

[tool.uv.sources]
testutils = { workspace = true }

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["spiffe*"]

[tool.setuptools.package-data]
spiffe = ["py.typed"]

# Tool configurations
[tool.mypy]
ignore_missing_imports = true
files = ["src", "tests"]

[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
]
testpaths = [
    "tests",
]
