[project]
name = "testutils"
version = "0.1.0"
description = "Test utilities for py-spiffe"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["testutils*"]

[tool.setuptools.package-data]
testutils = ["py.typed"]
